--- a/HTML5 e CSS3/barbearia_atividade/style.css
+++ b/HTML5 e CSS3/barbearia_atividade/style.css
@@ -1,3 +1,9 @@
+body{
+    font-family: 'Montserrat', sans-serif;
+}
+
+
+
 header{
     background: gray;
     padding: 20px 0;
@@ -150,4 +156,83 @@ thead{
 td, th{
     border: 1px solid black;
     padding: 8px 15px;
+}
+
+/*css da pagina inicial*/
+
+.banner{
+    width: 100%;
+
+}
+
+/* em= fonte padrão da pagina, 2em = 2x a fonte size*/
+
+.titulo-principal{
+    text-align: center;
+    font-size: 2em;
+    margin: 0 0 1em;
+    clear: left;
+}
+
+.principal p{
+    margin: 0 0 1em;
+}
+
+.principal strong{
+    font-weight: bold;
+}
+
+.principal em{
+    font-style: italic;
+}
+
+.utensilios{
+    width: 120px;
+    float: left;
+    margin: 0 20px 20px 0;
+}
+
+.mapa{
+    padding: 3em 0;
+}
+
+.mapa p{
+    margin: 0 0 2em;
+    text-align: center;
+}
+
+
+.beneficios{
+    padding: 3em o;
+}
+
+.conteudo-beneficios{
+    width: 640px;
+    margin: 0 auto;
+
+}
+
+.lista-beneficios{
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.itens{
+    line-height: 1.5;
+
+}
+
+.itens:first-child{
+    font-weight: bold;
+}
+
+.imagem-beneficios {
+    width: 60%;
+}
+
+
+.video {
+    width: 560px;
+    margin: 2em auto;
 }
