--- a/HTML5 e CSS3/barbearia_atividade/style.css
+++ b/HTML5 e CSS3/barbearia_atividade/style.css
@@ -3,7 +3,6 @@ body{
 }
 
 
-
 header{
     background: gray;
     padding: 20px 0;
@@ -99,10 +98,43 @@ footer{
 }
 
 
-main{
+
+.contato-main{
     width: 940px;
     margin: 0 auto;
 }
+
+/*EXEMPLO: caso eu queira modificar uma tag <p> dentro de uma sessão onde existem outras sub-sessões com este mesmo tipo de tag, 
+normalmente as alterações vão ser impostas a todos os outros <p> dentro de todas as tags, mesmo que eu queira modificar apenas uma delas (tag-exemplo p{}).
+
+PARA MUDAR AS TAGS QUE SÃO FILHAS DIRETAS DE OUTRA TAG, SE USA (tag-exemplo > p{}), sendo tag-exemplo a tag pai.
+
+PARA SELECIONAR UMA TAG SEGUINTE A OUTRA TAG (tag irmã), sendo impossibilitado usar a tag pai, SE USA (tag-exemplo + p{}) 
+
+PARA SELECIONAR TODAS AS TAGS IRMÃS SEGUINTES, UTILIZA-SE (tag-exemplo ~ p{})
+
+PARA SELECIONAR TODAS AS TAGS MENOS UMA EM ESPECIFICO, SE USA (tag-exemplo p:not(# ou . nome))
+
+exemplos na pratica:
+
+(REMOVER <!--<p>QUALQUER CONTEUDO</p>--> DO HTML)*/
+
+/*main > p {
+    background: red; 
+}*/
+
+/*img + p { 
+    background: blue;
+}*/
+
+/*img ~ p {
+    background: yellow
+}*/
+
+/*.principal p:not(#missao) {
+    background: orange;
+}*/
+
 
 form{
     margin: 40px 0 ;
@@ -174,6 +206,15 @@ td, th{
     clear: left;
 }
 
+
+.principal{
+    padding: 3em 0;
+    background: #FEFEFE;
+    width: 940px;
+    margin: 0 auto;
+
+}
+
 .principal p{
     margin: 0 0 1em;
 }
@@ -194,7 +235,15 @@ td, th{
 
 .mapa{
     padding: 3em 0;
+    background: linear-gradient(#FEFEFE, grey);
+
 }
+
+.mapa-conteudo{
+    width: 940px;
+    margin: 0 auto;
+}
+
 
 .mapa p{
     margin: 0 0 2em;
@@ -203,7 +252,9 @@ td, th{
 
 
 .beneficios{
-    padding: 3em o;
+    padding: 3em 0;
+    background: grey;
+
 }
 
 .conteudo-beneficios{
@@ -227,12 +278,40 @@ td, th{
     font-weight: bold;
 }
 
-.imagem-beneficios {
-    width: 60%;
+.itens:before{
+    content: "★";
 }
 
+.imagem-beneficios {
+    width: 60%;
+    opacity: 1;
+    transition: 400ms;
+    box-shadow: 10px 10px 10px 0 black;
+}
+
+.imagem-beneficios:hover{
+    opacity: 0.3;
+}
 
 .video {
     width: 560px;
     margin: 2em auto;
+}
+
+@media screen and (max-width: 480px) {
+    .caixa,.principal,.conteudo-beneficios,.mapa-conteudo,.video{
+        width: auto;
+    }
+
+    h1{
+        text-align: center;
+    }
+
+    nav{
+        position: static;
+    }
+
+    .lista-beneficios, .imagem-beneficios{
+        width: 100%;
+    }
 }
